--- a/reee_port_01/reee_port_01.csproj
+++ b/reee_port_01/reee_port_01.csproj
@@ -126,7 +126,6 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <None Include="reee_class_diagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -141,7 +140,7 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\reeeportsettings.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
