Revert "Removed local XML report saving"
This reverts commit 0ff5c5bf5bbc08a38e13d97a41978d63d87a985d.

--- a/reee_port_01/reee_port_01.csproj
+++ b/reee_port_01/reee_port_01.csproj
@@ -89,6 +89,7 @@
     </Page>
     <Compile Include="Handlers\GoogleSheetsHandler.cs" />
     <Compile Include="Notes\Note.cs" />
+    <Compile Include="Handlers\XMLHandler.cs" />
     <Compile Include="Settings\Settings.cs" />
     <Compile Include="Views\App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
